--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+    </head>
+    <body>
+        <div class="container">
+            <div id="geolib">
 
+            </div>
+            <h1>Geo location experiments</h1>
+            <div id="results">
+
+            </div>
+            <div class="">
+                <button type="button" name="clickMe" id="clickMe">Click!</button>
+            </div>
+        </div>
+    </body>
+    <script src="geolib.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
+</html>
